feat: toaster
